--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
